otimizando dashboard